test/should-fail/检查返回值-13.j
function test takes nothing returns real
    return 0
endfunction